# Atho-Testnet

./: .gitignore  .mailmap  ATHO_CONSENSUS_SECURITY_VULNERABILITY_AND_PHASE_TEST_AUDIT.md  ATHO_CONSENSUS_VALIDATION_FLOW_GUIDE.md  COMMANDS.md  CONSENSUS_EDGE_CASE_AND_ATTACK_TEST_AUDIT.md  CONSENSUS_FULL_AUDIT_AND_GRADE.md  CRYPTO_MIGRATION_REPORT.md  Cargo.toml  Everything_ATHO.md  PACKAGING.md  README.md  RELEASE_NOTES.md  TODO.md  VALIDATION_RULES.md  benchmark.md  consensus_security_report.md  error_codes.json  fuzz_report.md  mainnet.py  node.output  node_output.txt  quickstart.md  regnet.py  regression_report.md  reorg_fork_rollback_audit.md  runmainnet.py  runregnet.py  runtestnet.py  runtime_launcher.py  testnet.py  unknown_risks_report.md
.github/workflows/: production-readiness.yml  publish-packages.yml
Falcon 512 rs/fn-dsa/: Cargo.toml
Falcon 512 rs/fn-dsa-comm/: Cargo.toml
Falcon 512 rs/fn-dsa-comm/src/: shake.rs
Falcon 512 rs/fn-dsa-kgen/: Cargo.toml
Falcon 512 rs/fn-dsa-kgen/src/: lib.rs
Falcon 512 rs/fn-dsa-sign/: Cargo.toml
Falcon 512 rs/fn-dsa-sign/src/: lib.rs  sampler.rs
Falcon 512 rs/fn-dsa-vrfy/: Cargo.toml
Falcon 512 rs/fn-dsa-vrfy/src/: lib.rs
Falcon 512 rs/fn-dsa/src/: lib.rs
crates/atho-core/: Cargo.toml
crates/atho-core/benches/: hot_paths.rs
crates/atho-core/examples/: regenerate_genesis.rs
crates/atho-core/src/: address.rs  block.rs  consensus.rs  constants.rs  crypto.rs  encoding.rs  error.rs  genesis.rs  lib.rs  network.rs  transaction.rs
crates/atho-core/src/consensus/: params.rs  pow.rs  rules.rs  signatures.rs  subsidy.rs  tx_policy.rs
crates/atho-core/src/crypto/: hash.rs
crates/atho-crypto/: Cargo.toml  build.rs
crates/atho-crypto/benches/: falcon_hot_paths.rs
crates/atho-crypto/src/: error.rs  falcon.rs  kyber.rs  lib.rs  secret.rs
crates/atho-errors/: Cargo.toml
crates/atho-gpu-native/: Cargo.toml  build.rs
crates/atho-installer/: Cargo.toml
crates/atho-node/: Cargo.toml
crates/atho-node/native/gpu/: gpu_miner.cpp  sha3_384.cl  sha3_384.cu
crates/atho-node/src/: api.rs  chainstate.rs  config.rs  dev.rs  error.rs  explorer.rs  lib.rs  logging.rs  mempool.rs  miner.rs  mining.rs  mining_backend.rs  node.rs  orchestrator.rs  runtime.rs  service.rs  sync.rs  system.rs  tcp_p2p.rs  validation.rs  wallet_history.rs
crates/atho-node/tests/: protocol_fixtures.rs
crates/atho-p2p/: Cargo.toml
crates/atho-p2p/benches/: network_hot_paths.rs
crates/atho-p2p/src/: address_manager.rs  audit.rs  banlist.rs  codec.rs  config.rs  connection.rs  downloader.rs  handshake.rs  lib.rs  peer.rs  protocol.rs  relay.rs  sync.rs
crates/atho-qt/: Cargo.toml  GUI_REFERENCE_MAP.md
crates/atho-qt/src/: app.rs  connection.rs  error.rs  lib.rs  resources.rs  state.rs  view.rs
crates/atho-qt/src/app/: amounts.rs  mnemonic_ui.rs  models.rs  shell.rs  startup.rs  theme.rs  wallet_ledger.rs
crates/atho-qt/src/app/dialogs/: mod.rs  wallet.rs  welcome.rs
crates/atho-qt/src/app/pages/: console.rs  mod.rs  overview.rs  receive.rs  send.rs  settings.rs  transactions.rs
crates/atho-qt/src/app/widgets/: mod.rs
crates/atho-rpc/: Cargo.toml
crates/atho-rpc/src/: command.rs  error.rs  lib.rs  request.rs  response.rs  server.rs  transport.rs
crates/atho-storage/: Cargo.toml
crates/atho-storage/src/: block_files.rs  chainstate.rs  config.rs  db.rs  error.rs  lib.rs  path.rs  utxo.rs  validation.rs
crates/atho-wallet/: Cargo.toml
crates/atho-wallet/benches/: datafile_hot_paths.rs
crates/atho-wallet/src/: address_book.rs  hd.rs  keypool.rs  lib.rs  snapshot.rs  wallet.rs
crates/atho-wallet/src/mnemonic/: mod.rs  wordlist.rs
crates/atho-wallet/src/wallet/: datafile.rs
docs/: ATHO_CLI_COMMANDS.md  ATHO_COMMAND_PERMISSIONS.md  ATHO_DANGEROUS_COMMANDS.md  ATHO_DEBUG_CONSOLE.md  ATHO_ERROR_CODES.md  ATHO_PRODUCTION_API_GUIDE.md  ATHO_PRODUCTION_DEPLOYMENT_GUIDE.md  ATHO_PRODUCTION_READINESS_TEST_PLAN.md  ATHO_RPC_API.md  ATHO_SECURITY_TEST_CHECKLIST.md  ATHO_TEST_MATRIX.md  CODE_COMMENTING_STANDARD.md  CONSENSUS_CODE_GUIDE.md  DEVELOPER_ONBOARDING.md  ERROR_CODE_GUIDE.md  MEMPOOL_CODE_GUIDE.md  P2P_CODE_GUIDE.md  STORAGE_CODE_GUIDE.md  WALLET_CODE_GUIDE.md  api.md  architecture-topology-audit-2026-05-07.md  architecture.md  commands.md  configuration.md  consensus.md  index.md  mining.md  setup.md  testing.md  troubleshooting.md
docs/architecture/: lifecycle-flows.md  system-architecture.md
docs/archive/: release-notes.md
docs/build-deployment/: athod.service.example  packaging.md
docs/consensus/: consensus-rules.md  proof-of-work-and-emission.md  reorg-fork-pruning.md  versioning-and-activations.md
docs/crypto/: cryptography.md  migration-report.md
docs/gui-client/: qt-client.md  qt-reference-map.md
docs/node-runtime/: mining-and-mempool.md  node-runtime-and-p2p.md  rpc-and-client.md
docs/operations/: commands.md  dev-workspace.md  gpu-mining.md  launch-checklist.md  linux-quick-start.md  macos-quick-start.md  optimizations-and-max-parallelization-speed.md  runtime-model.md  troubleshooting.md  vps-full-node.md  windows-quick-start.md
docs/overview/: about-atho.md  project-overview.md  repository-structure.md
docs/production-readiness/: current-status.md  release-notes.md  roadmap.md
docs/project/: rebuild-roadmap.md
docs/protocol/: addresses-and-keys.md  blocks-and-consensus.md  network-and-identity.md  transactions.md
docs/reference/: reference-materials.md
docs/reports/: AIP-001-ATHO-PERFORMANCE-AND-REGRESSION-PROOF-IMPROVEMENTS.md  README.md  (+14 more)
fuzz/: Cargo.toml
fuzz/fuzz_targets/: address_decode.rs  block_decode.rs  block_template_decode.rs  block_validate.rs  common.rs  compact_block_reconstruct.rs  mempool_admission.rs  network_message_decode.rs  p2p_frame_decode.rs  p2p_message_roundtrip.rs  rpc_request_decode.rs  sighash.rs  tx_decode.rs  tx_roundtrip.rs  tx_witness_parse.rs
scripts/: __init__.py  package.ps1  package.sh  release.py  render_public_documents.py  run_qt_ui_smoke.sh  runtime_launcher.py  sync_regression_same_box.sh
tests/: test_runtime_launcher.py
(+29 files in other folders)
