[package]
name = "fn-dsa-vrfy"
version = "0.3.0"
authors = ["Thomas Pornin <thomas.pornin@nccgroup.com>"]
categories = ["cryptography", "no-std"]
description = "FN-DSA signature scheme"
edition = "2021"
keywords = ["cryptography", "fn-dsa", "falcon"]
license = "Unlicense"
repository = "https://github.com/pornin/rust-fn-dsa"
rust-version = "1.82"

[dependencies]
fn-dsa-comm = { version = "0.3", path = "../fn-dsa-comm" }

[dev-dependencies]
hex = "0.4.3"

[features]
default = []
no_avx2 = []
