[package]
name = "atho-node"
version = "0.1.0"
edition = "2021"
license = "Proprietary"

[dependencies]
atho-core = { path = "../atho-core" }
atho-crypto = { path = "../atho-crypto" }
atho-p2p = { path = "../atho-p2p" }
atho-rpc = { path = "../atho-rpc" }
atho-storage = { path = "../atho-storage" }
atho-wallet = { path = "../atho-wallet" }
rayon = "1"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[[bin]]
name = "athod"
path = "src/bin/athod.rs"

[[bin]]
name = "atho-mine"
path = "src/bin/atho-mine.rs"

[[bin]]
name = "atho-attack"
path = "src/bin/atho-attack.rs"

[[bin]]
name = "atho-adversarial"
path = "src/bin/atho-adversarial.rs"
