[package]
name = "atho-p2p"
version = "0.1.0"
edition = "2021"
license = "Proprietary"

[dependencies]
atho-core = { path = "../atho-core" }
bincode = "1"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde-big-array = "0.5"
thiserror = "1"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "network_hot_paths"
harness = false
