[package]
name = "atho-rpc"
version = "0.1.0"
edition = "2021"
license = "Proprietary"

[dependencies]
atho-core = { path = "../atho-core" }
atho-errors = { path = "../atho-errors" }
atho-storage = { path = "../atho-storage" }
serde = { version = "1", features = ["derive"] }
serde-big-array = "0.5"
serde_json = "1"
thiserror = "1"
