[package]
name = "atho-storage"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
atho-core = { path = "../atho-core" }
atho-crypto = { path = "../atho-crypto" }
atho-errors = { path = "../atho-errors" }
bincode = "1"
hex = "0.4"
lmdb = "0.8"
num-bigint = "0.4"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde-big-array = "0.5"
sha3 = "0.10"
thiserror = "1"
